[2022-44] Added new notebooks and successfully insert data into DB

--- a/src/revised_case_normalization/KSSG_Linth_2019_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_Linth_2019_normalization.ipynb
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:41:58.168 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 15 cases for KSSG Linth 2019\n",
-      "2022-11-10 11:41:58.171 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:59 - TYPES:\n",
+      "2022-11-11 09:26:31.234 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 15 cases for KSSG Linth 2019\n",
+      "2022-11-11 09:26:31.239 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "tranche                                string\n",
       "datum                                  string\n",
       "case_id                                object\n",
@@ -118,16 +118,16 @@
       "fallbesprechung                        string\n",
       "case_id_norm                           object\n",
       "dtype: object\n",
-      "2022-11-10 11:41:58.176 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-10 11:41:58.178 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 11:41:58.181 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 11:41:58.183 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 11:41:58.184 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 11:41:58.187 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 3 rows were affected:\n",
+      "2022-11-11 09:26:31.244 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-11 09:26:31.247 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-11 09:26:31.250 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-11 09:26:31.252 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-11 09:26:31.253 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-11 09:26:31.257 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 3 rows were affected:\n",
       "row 8: primary diagnosis S701 => M6285\n",
       "row 9: primary diagnosis S501 => T7960\n",
       "row 11: primary diagnosis T8903 => T814\n",
-      "2022-11-10 11:41:58.190 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:106 - Completed validation\n"
+      "2022-11-11 09:26:31.261 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -492,7 +492,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:42:03.061 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 5110 rows from the DB, for the hospital 'KSSG Linth' in 2019\n"
+      "2022-11-11 09:26:39.627 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 5110 rows from the DB, for the hospital 'KSSG Linth' in 2019\n"
      ]
     },
     {
@@ -691,8 +691,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:42:04.135 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 15 cases ...\n",
-      "2022-11-10 11:42:05.087 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 15 cases into: 15 revisions, 150 diagnoses rows, 55 procedure rows\n"
+      "2022-11-11 09:26:40.373 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 15 cases ...\n",
+      "2022-11-11 09:26:41.534 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 15 cases into: 15 revisions, 150 diagnoses rows, 55 procedure rows\n"
      ]
     }
    ],
@@ -924,12 +924,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 11:42:05.101 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 15 cases into the 'Revisions' table ...\n",
-      "2022-11-10 11:42:07.766 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 15 cases into the 'Revisions' table\n",
-      "2022-11-10 11:42:07.768 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 150 rows into the 'Diagnoses' table ...\n",
-      "2022-11-10 11:42:09.866 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 150 rows into the 'Diagnoses' table\n",
-      "2022-11-10 11:42:09.869 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 55 rows into the 'Procedures' table ...\n",
-      "2022-11-10 11:42:11.228 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 55 rows into the 'Procedures' table\n"
+      "2022-11-11 09:26:41.554 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 15 cases into the 'Revisions' table ...\n",
+      "2022-11-11 09:26:42.747 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 15 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-11 09:26:42.879 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 15 cases into the 'Revisions' table\n",
+      "2022-11-11 09:26:42.885 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 150 rows into the 'Diagnoses' table ...\n",
+      "2022-11-11 09:26:44.518 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 150 rows into the 'Diagnoses' table\n",
+      "2022-11-11 09:26:44.520 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 55 rows into the 'Procedures' table ...\n",
+      "2022-11-11 09:26:45.425 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 55 rows into the 'Procedures' table\n"
      ]
     }
    ],
