[2022-44] Checked again for missing hospitals and create new notebooks

--- a/src/revised_case_normalization/Hirslanden_Zürich_2017.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Zürich_2017.ipynb
@@ -600,45 +600,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2c0a638b-55d2-4b7e-9170-08d2d6a9bc8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "aimedic_id                                                61304\n",
-       "case_id                                                41604407\n",
-       "primary_diagnosis                                         J4400\n",
-       "secondary_diagnoses       [J4400, D638, J9610, I1090, N40, ...]\n",
-       "primary_procedure                                              \n",
-       "secondary_procedures                                         []\n",
-       "gender                                                        M\n",
-       "age_years                                                    72\n",
-       "age_days                                                      0\n",
-       "gestation_age                                                 0\n",
-       "duration_of_stay                                              5\n",
-       "ventilation_hours                                             0\n",
-       "grouper_admission_type                                       01\n",
-       "admission_date                                       2017-12-06\n",
-       "admission_weight                                              0\n",
-       "grouper_discharge_type                                       00\n",
-       "discharge_date                                       2017-12-11\n",
-       "Name: 106, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "revised_cases.loc[106]"
+    "    display(unmatched)"
    ]
   },
   {
