--- a/src/revised_case_normalization/Winterthur_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2017_normalization.ipynb
@@ -611,7 +611,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
