--- a/src/revised_case_normalization/Winterthur_2019_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2019_normalization.ipynb
@@ -65,7 +65,8 @@
     "         '2019',\n",
     "         'Änderungen Winterthur 2019')\n",
     "\n",
-    "print(file_info)"
+    "print(file_info)\n",
+    "\n"
    ]
   },
   {
@@ -83,7 +84,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-11 08:54:37.037 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 90 cases for KSW 2019\n"
+      "2022-11-11 10:26:08.759 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 90 cases for KSW 2019\n"
      ]
     },
     {
@@ -94,7 +95,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m revised_cases_df \u001b[38;5;241m=\u001b[39m normalize(file_info)\n\u001b[1;32m      2\u001b[0m revised_cases_df\n",
-      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.normalize.normalize) at 0xffff3b877130>:76\u001b[0m, in \u001b[0;36mnormalize\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650605825664, __beartype_object_187650614802720, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.normalize.normalize) at 0xffff4e34f130>:76\u001b[0m, in \u001b[0;36mnormalize\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187651170465392, __beartype_object_187651179498240, *args, **kwargs)\u001b[0m\n",
       "File \u001b[0;32m~/work/src/revised_case_normalization/notebook_functions/normalize.py:46\u001b[0m, in \u001b[0;36mnormalize\u001b[0;34m(fi, columns_mapper, columns_to_lstrip, columns_to_cast)\u001b[0m\n\u001b[1;32m     44\u001b[0m non_existing_columns_to_rename \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(columns_mapper\u001b[38;5;241m.\u001b[39mkeys())\u001b[38;5;241m.\u001b[39mdifference(df\u001b[38;5;241m.\u001b[39mcolumns)\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(non_existing_columns_to_rename) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 46\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe following columns to rename did not exist: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(non_existing_columns_to_rename))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     47\u001b[0m df\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39mcolumns_mapper, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# Fix unavailable duration of stay\u001b[39;00m\n",
       "\u001b[0;31mValueError\u001b[0m: The following columns to rename did not exist: ['admno']"
      ]
@@ -145,7 +146,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
