--- a/src/revised_case_normalization/Hirslanden_Beau_Site_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Beau_Site_2017_normalization.ipynb
@@ -1129,7 +1129,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
