--- a/src/revised_case_normalization/Hirslanden_Beau_Site_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Beau_Site_2018_normalization.ipynb
@@ -1314,7 +1314,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
