--- a/src/revised_case_normalization/Hirslanden_Birshof_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Birshof_2017_normalization.ipynb
@@ -440,7 +440,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
