--- a/src/revised_case_normalization/Hirslanden_Birshof_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Birshof_2018_normalization.ipynb
@@ -310,7 +310,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
