--- a/src/revised_case_normalization/Hirslanden_Linde_2017.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Linde_2017.ipynb
@@ -579,7 +579,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
