--- a/src/revised_case_normalization/Hirslanden_Linde_2018.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Linde_2018.ipynb
@@ -574,7 +574,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
