--- a/src/revised_case_normalization/Hirslanden_St_Anna_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_St_Anna_2018_normalization.ipynb
@@ -2318,7 +2318,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
