--- a/src/revised_case_normalization/KSSG_2021_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_2021_normalization.ipynb
@@ -867,7 +867,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
