--- a/src/revised_case_normalization/KSSG_Linth_2019_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_Linth_2019_normalization.ipynb
@@ -678,7 +678,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
