--- a/src/revised_case_normalization/KSSG_SRRWS_2019_normalization.ipynb
+++ b/src/revised_case_normalization/KSSG_SRRWS_2019_normalization.ipynb
@@ -1302,7 +1302,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
