--- a/src/revised_case_normalization/USZ_2018_normalization.ipynb
+++ b/src/revised_case_normalization/USZ_2018_normalization.ipynb
@@ -476,7 +476,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
