--- a/src/revised_case_normalization/USZ_2019_30_04_2020_NO_Match.ipynb
+++ b/src/revised_case_normalization/USZ_2019_30_04_2020_NO_Match.ipynb
@@ -83,8 +83,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 13:54:41.416 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 154 cases for USZ 2019\n",
-      "2022-11-10 13:54:41.420 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:60 - TYPES:\n",
+      "2022-11-11 10:11:13.242 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 154 cases for USZ 2019\n",
+      "2022-11-11 10:11:13.247 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
       "unnamed: 0           string\n",
       "case_id              object\n",
       "patient_id           object\n",
@@ -111,17 +111,17 @@
       "kommentar usz        string\n",
       "case_id_norm         object\n",
       "dtype: object\n",
-      "2022-11-10 13:54:41.432 | INFO     | src.utils.dataframe_utils:validate_icd_codes:71 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': The following 5 rows were affected:\n",
+      "2022-11-11 10:11:13.258 | INFO     | src.utils.dataframe_utils:validate_icd_codes:71 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': The following 5 rows were affected:\n",
       "row 5: discarded ICDs after validation {'E1191.N133'}\n",
       "row 6: discarded ICDs after validation {'R18.K746.I982'}\n",
       "row 7: discarded ICDs after validation {'I690.Z930'}\n",
       "row 10: discarded ICDs after validation {'G8209.R471'}\n",
       "row 12: discarded ICDs after validation {'E1141.G632'}\n",
-      "2022-11-10 13:54:41.439 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 13:54:41.448 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 13:54:41.491 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 13:54:41.492 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 13:54:41.507 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 19 rows were affected:\n",
+      "2022-11-11 10:11:13.265 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-11 10:11:13.273 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-11 10:11:13.318 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-11 10:11:13.318 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-11 10:11:13.332 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 19 rows were affected:\n",
       "row 2: primary diagnosis R11 => M8088\n",
       "row 20: primary diagnosis M340 => I730\n",
       "row 56: primary diagnosis A418 => A419\n",
@@ -141,7 +141,7 @@
       "row 144: primary diagnosis C61 => A410\n",
       "row 149: primary diagnosis S3618 => C23\n",
       "row 150: primary diagnosis T8902 => A490\n",
-      "2022-11-10 13:54:41.509 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:107 - Completed validation\n"
+      "2022-11-11 10:11:13.335 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
      ]
     },
     {
@@ -433,8 +433,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 13:54:44.176 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 14430 rows from the DB, for the hospital 'USZ' in 2019\n",
-      "2022-11-10 13:54:44.190 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 154 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-11 10:11:16.395 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 14430 rows from the DB, for the hospital 'USZ' in 2019\n",
+      "2022-11-11 10:11:16.411 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 154 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     },
     {
@@ -445,11 +445,11 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
       "Cell \u001b[0;32mIn [4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Ignore the patient ID in this dataset, because it is encrypted\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cols_to_join\u001b[38;5;241m.\u001b[39mremove(PATIENT_ID_COL)\n\u001b[0;32m----> 7\u001b[0m revised_cases, unmatched \u001b[38;5;241m=\u001b[39m revise(file_info, revised_cases_df, validation_cols\u001b[38;5;241m=\u001b[39mcols_to_join)\n\u001b[1;32m      8\u001b[0m revised_cases\u001b[38;5;241m.\u001b[39mhead()\n",
-      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.revise.revise) at 0xffff5fa4beb0>:75\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650662897264, __beartype_object_187650671927344, __beartype_getrandbits, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.revise.revise) at 0xffff457100d0>:75\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187651306915440, __beartype_object_187651315949824, __beartype_getrandbits, *args, **kwargs)\u001b[0m\n",
       "File \u001b[0;32m~/work/src/revised_case_normalization/notebook_functions/revise.py:51\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(file_info, revised_cases_df, validation_cols)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# Retrieve the codes from the DB\u001b[39;00m\n\u001b[1;32m     50\u001b[0m original_revision_ids \u001b[38;5;241m=\u001b[39m get_earliest_revisions_for_aimedic_ids(matched_cases[AIMEDIC_ID_COL]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mtolist(), db\u001b[38;5;241m.\u001b[39msession)\n\u001b[0;32m---> 51\u001b[0m original_cases \u001b[38;5;241m=\u001b[39m \u001b[43mget_codes\u001b[49m\u001b[43m(\u001b[49m\u001b[43moriginal_revision_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# Apply the revisions to the cases from the DB\u001b[39;00m\n\u001b[1;32m     54\u001b[0m revised_cases \u001b[38;5;241m=\u001b[39m apply_revisions(original_cases, matched_cases)\n",
-      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_codes) at 0xffff5f1739a0>:49\u001b[0m, in \u001b[0;36mget_codes\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650671927344, __beartype_object_187650677235264, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_codes) at 0xffff44df3b50>:49\u001b[0m, in \u001b[0;36mget_codes\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187651315949824, __beartype_object_187651321250944, *args, **kwargs)\u001b[0m\n",
       "File \u001b[0;32m~/work/src/service/bfs_cases_db_service.py:231\u001b[0m, in \u001b[0;36mget_codes\u001b[0;34m(df_revision_ids, session)\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[38;5;129m@beartype\u001b[39m\n\u001b[1;32m    224\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_codes\u001b[39m(df_revision_ids: pd\u001b[38;5;241m.\u001b[39mDataFrame, session: Session) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame:\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;124;03m    Merging information on the diagnoses and procedures from the DB for usage in the revise function (revise.notebook_functions)\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;124;03m     @param df_revision_ids: a Dataframe with aimedic_id and revision_id\u001b[39;00m\n\u001b[1;32m    228\u001b[0m \u001b[38;5;124;03m     @return: a dataframe containing revision ids, diagnoses and procedures\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 231\u001b[0m     diagnoses_df \u001b[38;5;241m=\u001b[39m \u001b[43mget_diagnoses_codes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_revision_ids\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msession\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    232\u001b[0m     procedures_df \u001b[38;5;241m=\u001b[39m get_procedures_codes(df_revision_ids, session)\n\u001b[1;32m    234\u001b[0m     \u001b[38;5;66;03m# Drop the aimedic_id column to avoid adding it with a suffix and having to remove it later\u001b[39;00m\n",
-      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_diagnoses_codes) at 0xffff5f173640>:49\u001b[0m, in \u001b[0;36mget_diagnoses_codes\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650671927344, __beartype_object_187650677235264, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_diagnoses_codes) at 0xffff44df37f0>:49\u001b[0m, in \u001b[0;36mget_diagnoses_codes\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187651315949824, __beartype_object_187651321250944, *args, **kwargs)\u001b[0m\n",
       "File \u001b[0;32m~/work/src/service/bfs_cases_db_service.py:150\u001b[0m, in \u001b[0;36mget_diagnoses_codes\u001b[0;34m(df_revision_ids, session)\u001b[0m\n\u001b[1;32m    147\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_sql(query_diagnoses\u001b[38;5;241m.\u001b[39mstatement, session\u001b[38;5;241m.\u001b[39mbind)\n\u001b[1;32m    149\u001b[0m \u001b[38;5;66;03m# Select a subset of rows, which contain the primary diagnosis for each case\u001b[39;00m\n\u001b[0;32m--> 150\u001b[0m primary_diagnoses \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mis_primary\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrevision_id\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcode\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    151\u001b[0m primary_diagnoses\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcode\u001b[39m\u001b[38;5;124m'\u001b[39m: PRIMARY_DIAGNOSIS_COL}, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    153\u001b[0m \u001b[38;5;66;03m# Aggregate the subset of rows, which contain the secondary diagnoses for each case\u001b[39;00m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/pandas/core/frame.py:3811\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3810\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 3811\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3814\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/pandas/core/indexes/base.py:6108\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6105\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   6106\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6108\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6110\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   6111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6112\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
@@ -482,7 +482,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
