--- a/src/revised_case_normalization/Winterthur_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2018_normalization.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "if unmatched.shape[0] > 0:\n",
-    "    unmatched"
+    "    display(unmatched)"
    ]
   },
   {
